@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2023-07-20T08:14:39Z",
+  "timestamp" : "2023-07-21T08:14:24Z",
   "count_outdated" : 143,
   "uniques_outdated" : 118,
-  "count" : 153,
-  "uniques" : 128,
+  "count" : 154,
+  "uniques" : 129,
   "clones" : [
     {
       "timestamp": "2023-07-08T00:00:00Z",
@@ -70,6 +70,15 @@
     },
     {
       "timestamp": "2023-07-19T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "count_decinc": [ 0, 1 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ],
+      "uniques_decinc": [ 0, 1 ]
+    },
+    {
+      "timestamp": "2023-07-21T00:00:00Z",
       "count": 1,
       "count_minmax": [ 1, 1 ],
       "count_decinc": [ 0, 1 ],
