@@ -1,5 +1,5 @@
 {
-  "count": 10,
+  "count": 11,
   "uniques": 5,
   "clones": [
     {
@@ -39,6 +39,11 @@
     },
     {
       "timestamp": "2023-07-19T00:00:00Z",
+      "count": 1,
+      "uniques": 1
+    },
+    {
+      "timestamp": "2023-07-21T00:00:00Z",
       "count": 1,
       "uniques": 1
     }
